docs/_sass/v2-viz.scss
#v2-div {
  position: absolute;
  top: 9rem;
  left: 1rem;
  height: calc(100vh - 3rem - 8rem - 3rem);
  min-height: calc(100vh - 3rem - 8rem - 3rem);
  max-height: calc(100vh - 3rem - 8rem - 3rem);
  width: calc(100vw - 2rem);
  display: none;
  z-index: 1020;

  background-color: rgba(255, 255, 255, 0.93);

  h1, h2, h3, h4, h5, h6 {
    color: $green;
  }

  h2 {
    text-align: right;
  }

  svg {
    width: 100%; // keep for wall of gain
  }

  .spreadsheet {
    overflow-y: auto;
    max-height: calc(100vh / 3);
  }

  .big-number {
    margin: 0;
    color: $green;
    font-size: 4.5rem;
    font-weight: bold;
    text-align: center;
  }

  .big-number-desc {
    text-align: center;
  }

  .legend-ul li {
    font-weight: bold;
  }

  h5 {
    margin: 0 .5rem;
    color: #000000;
    font-size: 1.0rem;
  }

  .table .thead-dark th {
    background-color: $green;
    border: none;
    vertical-align: center;
  }

  .main-gain {
    margin: 0;
    color: $purple;
    line-height: 2rem;
    font-size: 2.8rem;

    small {
      font-size: 1.5rem;
    }
  }

  #gain-profiteers-list {
    h4 {
      color: $purple;
      font-size: 1rem;
    }
  }
  
  @media (min-width: 576px){
    font-size: 0.8rem;
    top: 7.25rem;
    left: .5rem;
    width: calc(100vw - 1rem);
    height: calc(100vh - 7.5rem - 1.75rem);
    min-height: calc(100vh - 7.5rem - 1.75rem);
    max-height: calc(100vh - 7.5rem - 1.75rem);

    .legend-ul li {
      font-size: 1.0rem;
    }
  }
}

